--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,12 +5,12 @@
   <mat-card-content>
     <form [formGroup]="form" (ngSubmit)="login()">
       <mat-form-field appearance="outline">
-        <mat-label>E-mail:</mat-label>
-        <input matInput type="email" id="email" placeholder="E-mail" formControlName="email" requiredminlength="5" required>
+        <mat-label>Usuário:</mat-label>
+        <input matInput type="string" id="username" placeholder="Username" formControlName="username" requiredminlength="5" required>
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Senha:</mat-label>
-        <input matInput type="password" id="senha" placeholder="Senha" formControlName="senha" requiredminlength="8" required>
+        <input matInput type="password" id="password" placeholder="Password" formControlName="password" requiredminlength="8" required>
       </mat-form-field>
       <div class="button_login">
         <span>Esqueci minha senha</span>
