--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -3,8 +3,7 @@
 html {
   @include mat.theme((
     color: (
-      primary: mat.$violet-palette,
-      tertiary: mat.$orange-palette,
+      primary: mat.$green-palette,
       theme-type: light
     ),
     typography: Roboto,
