--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -16,6 +16,9 @@
         <span>Esqueci minha senha</span>
         <button type="submit" mat-raised-button [disabled]="!form.valid" color="primary">Entrar</button>
       </div>
+      <div class="button_login">
+        <button type="button" mat-button (click)="cancel()">Cancelar</button>
+      </div>
     </form>
   </mat-card-content>
 </mat-card>
