feat: Cria servico de historico e componente que exibe maiores altas e baixas

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,11 @@
-<app-toolbar></app-toolbar>
+<app-toolbar>
+  <div high>
+    <app-greater [dataType]="0"></app-greater>
+  </div>
+  <div low>
+    <app-greater [dataType]="1"></app-greater>
+  </div>
+  <div volume>
+    <app-greater [dataType]="2"></app-greater>
+  </div>
+</app-toolbar>
