--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -28,7 +28,7 @@
     </mat-menu>
 </mat-toolbar>
 
-<mat-card>
+<mat-card class="chart-card">
     <mat-card-header>
         <mat-card-title>Gráfico</mat-card-title>
     </mat-card-header>
