--- a/src/app/components/greater/greater.component.html
+++ b/src/app/components/greater/greater.component.html
@@ -8,8 +8,8 @@
     <td mat-cell *matCellDef="let element"> {{element.ticker}} </td>
   </ng-container>
   <ng-container matColumnDef="value">
-    <th mat-header-cell *matHeaderCellDef> % </th>
-    <td mat-cell *matCellDef="let element"> {{element.value | number:'2.2-2'}}% </td>
+    <th mat-header-cell *matHeaderCellDef> {{valueLabel}} </th>
+    <td mat-cell *matCellDef="let element" class="value-cell"> {{element.value | number:'2.2-2': 'pt'}} </td>
   </ng-container>
   
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
