feat: Implementa gráfico candlestick a ser exibido na home

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,7 @@
 <app-toolbar>
+  <div chart>
+    <app-graphics></app-graphics>
+  </div>
   <div high>
     <app-greater [dataType]="0"></app-greater>
   </div>
