fix: Altera para pegar histórico de 1 ano no grafico

--- a/src/app/components/toolbar/toolbar.component.css
+++ b/src/app/components/toolbar/toolbar.component.css
@@ -19,6 +19,12 @@
 }
 
 .chart-card {
+  width: 80%;
   margin: 20px;
   padding: 20px;
+}
+
+.toolbar-spacer {
+  display: flex;
+  justify-content: center;
 }
