--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -36,7 +36,7 @@
     </mat-card>
 </div>
 <div class="greater-cards">
-    <mat-card>
+    <mat-card class="greater-card">
         <mat-card-header>
             <mat-card-title>Maiores altas</mat-card-title>
         </mat-card-header>
