feat: Cria componente search bar

--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -27,6 +27,7 @@
         </button>
     </mat-menu>
 </mat-toolbar>
+<app-search-bar></app-search-bar>
 <div class="toolbar-spacer">
     <mat-card class="chart-card">
         <mat-card-header>
