feat: Melhora aparencia da toolbar e search bar

--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar color="primary">
+  <span>Pesquise ativos e obtenha mais informações</span>
   <form>
     <mat-form-field appearance="fill">
       <mat-label>Pesquisar</mat-label>
