--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,6 +1,7 @@
 :host {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   margin: 100px 0px;
 }
 
@@ -9,21 +10,15 @@ form {
   flex-direction: column;
 }
 
-mat-card {
-  border: 1px solid rgb(201, 201, 201);
-  padding: 10px;
-  /* background-color: #D6C292; */
-  border-radius: 5px;
-}
-
-mat-card-header {
+.header {
   display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
 }
 
-mat-card-title {
-  font-size: x-large;
+.header h1 {
+  margin: 0;
 }
 
 mat-form-field {
@@ -32,18 +27,17 @@ mat-form-field {
   margin-bottom: 10px;
 }
 
-.button_login {
+/* .button_login {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
 }
 
-.button_login > span {
+.button_login>span {
   margin-bottom: 10px;
   margin-top: 10px;
 }
 
-.button_login > button {
+.button_login>button {
   height: 30px;
-  /* background-color: #678C99; */
-}
+} */
