feat: Implementa tratamento de erros e usa snackbar para mostrar mensagens

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,7 +14,8 @@
         requiredminlength="8" required>
     </mat-form-field>
   </form>
-  <span>Esqueci minha senha</span>
+  <!-- <span>Esqueci minha senha</span> -->
+   <a routerLink="">Esqueci minha senha</a>
 </mat-dialog-content>
 <mat-dialog-actions>
   <!-- <div class="button_login"> -->
