--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -28,33 +28,6 @@
     </mat-menu>
 </mat-toolbar>
 <app-search-bar></app-search-bar>
-<div class="toolbar-spacer">
-    <mat-card class="chart-card">
-        <mat-card-header>
-            <mat-card-title>Gráfico</mat-card-title>
-        </mat-card-header>
-        <ng-content select="[chart]"></ng-content>
-    </mat-card>
-</div>
-<div class="greater-cards">
-    <mat-card class="greater-card">
-        <mat-card-header>
-            <mat-card-title>Maiores altas</mat-card-title>
-        </mat-card-header>
-        <ng-content select="[high]"></ng-content>
-    </mat-card>
-
-    <mat-card>
-        <mat-card-header>
-            <mat-card-title>Maiores baixas</mat-card-title>
-        </mat-card-header>
-        <ng-content select="[low]"></ng-content>
-    </mat-card>
-
-    <mat-card>
-        <mat-card-header>
-            <mat-card-title>Maiores volumes</mat-card-title>
-        </mat-card-header>
-        <ng-content select="[volume]"></ng-content>
-    </mat-card>
+<div>
+    <ng-content></ng-content>
 </div>
