refactor: Melhora acesso a rota stock-data

--- a/src/app/components/stock-data/stock-data.component.html
+++ b/src/app/components/stock-data/stock-data.component.html
@@ -5,7 +5,7 @@
         <mat-card-header>
           <mat-card-title>Gráfico</mat-card-title>
         </mat-card-header>
-        <app-graphics></app-graphics>
+        <app-graphics [ticker]="ticker"></app-graphics>
       </mat-card>
     </div>
   </div>
